--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
   <form class="search-form" id="search-form">
@@ -22,6 +28,19 @@
   <ul class="gallery">
     <!-- Список <li> с карточками изображений -->
   </ul>
-  <button class="button hidden" type="button" data-action="load-more">Load more</button>
+  <button
+    type="button"
+    class="btn btn-primary button"
+    data-action="load-more"
+  >
+      <span
+        class="spinner-border spinner-border-sm spinner is-hidden"
+        role="status"
+        aria-hidden="true"
+      ></span>
+
+    <span class="label">Показать ещё</span>
+  </button>
+
   </body>
 </html>
